# web-primes

./: Cargo.toml  README.md
src/: main.rs  prime.rs
