[package]
name = "web-primes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.async-std]
version = "1.10"
features = ["std", "attributes"]

[dependencies.num-bigint]
version = "0.4"
features = ["rand"]

[dependencies]
glass_pumpkin = "1.2"
rand = "0.8"
serde = "1.0"
tide = "0.16"
