[package]
name = "web-primes"
version = "0.1.0"
edition = "2021"
authors = ["Bart Massey <bart@cs.pdx.edu>"]
license-file = "LICENSE.txt"

[dependencies.async-std]
version = "1.10"
features = ["attributes"]

[dependencies.num-bigint]
version = "0.4"
features = ["rand"]

[dependencies]
glass_pumpkin = "1.2"
rand = "0.8"
serde = "1.0"
tide = "0.16"
